# YCSB-C-L4

./: .gitignore  CMakeLists.txt  Control  Kconfig.L4  Makefile  README.md
conf/: ycsbc-l4.cfg
server/: Makefile  README.md
server/include/: db.h  ipc_server.h  serializer.h  sqlite_ipc_server.h  sqlite_lib_db.h  sqlite_shm_server.h  utils.h
server/lib/: Makefile
server/lib/serializer/: Makefile  serializer.cc
server/lib/sqlite-lib-db/: Makefile  sqlite_lib_db.cc
server/sqlite-ipc-srv/: Makefile  README.md  ipc.cc  utils.h
server/sqlite-shm-srv/: Makefile  README.md  shm.cc
server/sqlite-srv/: Makefile  ipc.cc  ipc.h  ipc_server.h  main.cc  utils.h
server/src/: Makefile  ycsbc-l4.cc
server/src/core/: db.h  zipfian_generator.h
server/src/db/: basic_db.h  db_factory.cc  hashtable_db.cc  hashtable_db.h  sqlite_lib_db.cc  sqlite_lib_db.h
server/ycsbc-l4/: Makefile  ycsbc-l4.cc
server/ycsbc-l4/core/: client.h  core_workload.cc  core_workload.h  utils.h  zipfian_generator.h
server/ycsbc-l4/db/: basic_db.h  db_factory.cc  db_factory.h  hashtable_db.h  lock_stl_db.h  sqlite_ipc_db.cc  sqlite_ipc_db.h  sqlite_shm_db.cc  sqlite_shm_db.h
server/ycsbc-l4/lib/: mem_alloc.h
workloads/: Makefile
